vehicle/tests/golden/error/dataset/unsupportedFormat/unsupportedFormat.vcl
-- Test provides a reference to the dataset in an unsupported format.
@dataset
trainingDataset : List Rat
